// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test Pills length should render empty pill block if no pill 1`] = `<ul />`;

exports[`test Pills length should render multiple pills 1`] = `
<ul>
  <li
    className="pill primary"
  >
    Test1
  </li>
  <li
    className="pill primary"
  >
    Test2
  </li>
</ul>
`;

exports[`test Pills length should render single pill 1`] = `
<ul>
  <li
    className="pill primary"
  >
    Test1
  </li>
</ul>
`;
